--- a/package.json
+++ b/package.json
@@ -5,10 +5,18 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "Anthony Lively",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.2"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.2",   
+    "mysql": "^2.16.0",
+    "save": "^2.4.0",
+    "uuid": "^8.3.2"
+  },
+  "engines": {
+    "node": "12.x"
   }
 }
