--- a/package.json
+++ b/package.json
@@ -9,13 +9,7 @@
   "author": "Anthony Lively",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.2",   
-    "mysql": "^2.16.0",
-    "save": "^2.4.0",
-    "uuid": "^8.3.2"
+    "express": "^4.17.2"
   },
-  "engines": {
-    "node": "12.x"
-  }
+
 }
