--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "Anthony Lively",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "uuid": "^8.3.2"
   }
-
 }
