--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
   "author": "Anthony Lively",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.1",
     "express": "^4.17.2",
+    "mysql": "^2.18.1",
+    "save": "^2.4.0",
     "uuid": "^8.3.2"
+  },
+  "engines": {
+    "node": "12.x"
   }
 }
